assignment6_helm/deploy/k8s-manifests/gowebapp-mysql-netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: backend-policy
spec:
  podSelector:
    matchLabels:
      run: gowebapp-mysql
  ingress:
    - from:
      - podSelector:
          matchLabels:
            run: gowebapp
